deploy-config/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: spring-metal
  annotations:
   healthcheck.gslb.tanzu.vmware.com/service: spring-metal
   healthcheck.gslb.tanzu.vmware.com/path: /health
   healthcheck.gslb.tanzu.vmware.com/port: "8080"
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: spring-metal-gateway
    sectionName: http-spring-metal
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: spring-metal
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
